updates (broken rn)

--- a/src/makefile
+++ b/src/makefile
@@ -1,10 +1,10 @@
 CC = g++
 FLAGS = -Wall -Wextra -g -O0
 
-main: main.o DirectMapped.o SetAssociative.o
-	$(CC) $(FLAGS) main.o DirectMapped.o SetAssociative.o -o main
+main: main.o DirectMapped.o SetAssociative.o FullyAssociative.o
+	$(CC) $(FLAGS) main.o DirectMapped.o SetAssociative.o FullyAssociative.o -o main
 
-main.o: main.cpp DirectMapped.o SetAssociative.o
+main.o: main.cpp DirectMapped.o SetAssociative.o FullyAssociative.o
 	$(CC) $(FLAGS) main.cpp -c
 
 DirectMapped.o: DirectMapped.cpp DirectMapped.h
@@ -12,6 +12,9 @@ DirectMapped.o: DirectMapped.cpp DirectMapped.h
 
 SetAssociative.o: SetAssociative.cpp SetAssociative.h
 	$(CC) $(FLAGS) SetAssociative.cpp -c
+
+FullyAssociative.o: FullyAssociative.cpp FullyAssociative.h
+	$(CC) $(FLAGS) FullyAssociative.cpp -c
 
 clean:
 	rm *.o main
