--- a/src/makefile
+++ b/src/makefile
@@ -1,10 +1,10 @@
 CC = g++
-FLAGS = -Wall -Wextra -g -O0
+FLAGS = -Wall -Wextra -g
 
-main: main.o DirectMapped.o SetAssociative.o FullyAssociative.o SetAssociativeNoAllocation.o
-	$(CC) $(FLAGS) main.o DirectMapped.o SetAssociative.o FullyAssociative.o SetAssociativeNoAllocation.o -o main
+main: main.o DirectMapped.o SetAssociative.o FullyAssociative.o SetAssociativeNA.o
+	$(CC) $(FLAGS) main.o DirectMapped.o SetAssociative.o FullyAssociative.o SetAssociativeNA.o -o main
 
-main.o: main.cpp DirectMapped.o SetAssociative.o FullyAssociative.o SetAssociativeNoAllocation.o
+main.o: main.cpp DirectMapped.o SetAssociative.o FullyAssociative.o SetAssociativeNA.o
 	$(CC) $(FLAGS) main.cpp -c
 
 DirectMapped.o: DirectMapped.cpp DirectMapped.h
@@ -16,8 +16,8 @@ SetAssociative.o: SetAssociative.cpp SetAssociative.h
 FullyAssociative.o: FullyAssociative.cpp FullyAssociative.h
 	$(CC) $(FLAGS) FullyAssociative.cpp -c
 
-SetAssociativeNoAllocation.o: SetAssociativeNoAllocation.cpp SetAssociativeNoAllocation.h
-	$(CC) $(FLAGS) SetAssociativeNoAllocation.cpp -c
+SetAssociativeNA.o: SetAssociativeNA.cpp SetAssociativeNA.h
+	$(CC) $(FLAGS) SetAssociativeNA.cpp -c
 
 clean:
 	rm *.o main
