--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,5 @@
 CC = g++
-FLAGS = -Wall -Wextra -O3
+FLAGS = -Wall -Wextra -g -O0#-O3
 
 OBJS = DirectMapped.o SetAssociative.o FullyAssociativeLRU.o FullyAssociativePLRU.o SetAssociativeNA.o SetAssociativeNLP.o
 
